[package]
name = "diesel-ulid"
version = "0.1.0"
edition = "2021"
description = "Diesel-rs adapter for Ulid (rusty-ulid) to Postgres UUIDs"
authors = ["Sebastian Beyvers <sb@pus.de>"]
repository = "https://github.com/ArunaStorage/diesel-ulid"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["ulid", "uuid", "sortable", "identifier", "databases"]

[dependencies]
rusty_ulid = { version = "2.0.0", default-features = false, features = ["rand", "chrono", "serde"]}
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0.3", features = ["postgres", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
uuid = "1.3.1"


[dev-dependencies]
chrono = "0.4.24"