[package]
name = "diesel-ulid"
version = "0.3.1"
edition = "2021"
description = "Diesel-rs & tokio_postgres adapter for Ulid (rusty-ulid) to Postgres UUIDs"
authors = ["Sebastian Beyvers <sb@pus.de>"]
repository = "https://github.com/ArunaStorage/diesel-ulid"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["ulid", "uuid", "sortable", "identifier", "databases"]

[dependencies]
rusty_ulid = { version = "2.0.0", default-features = false, features = ["rand", "chrono", "serde"]}
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"], optional = true }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
postgres-types = { version = "0.2.5", features = ["derive"], optional = true}
bytes = "1.4.0"
serde_with = "3.3.0"

[dev-dependencies]
chrono = "0.4.26"
serde_json = "1.0.104"
bincode = "1.3.3"

[features]
default = ["postgres"]
diesel = ["dep:diesel"]
postgres = ["dep:postgres-types"]
