[package]
name = "diesel-ulid"
version = "0.3.2"
edition = "2021"
description = "Diesel-rs & tokio_postgres adapter for Ulid (rusty-ulid) to Postgres UUIDs"
authors = ["Sebastian Beyvers <sb@pus.de>"]
repository = "https://github.com/ArunaStorage/diesel-ulid"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["ulid", "uuid", "sortable", "identifier", "databases"]

[dependencies]
rusty_ulid = { version = "2.0.0", default-features = false, features = ["rand", "chrono", "serde"]}
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.2.1", features = ["postgres", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"], optional = true }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
postgres-types = { version = "0.2.6", features = ["derive"], optional = true}
bytes = "1.6.0"
serde_with = "3.8.0"
rand = "0.8.5"

[dev-dependencies]
chrono = "0.4.38"
serde_json = "1.0.120"
bincode = "1.3.3"

[features]
default = ["postgres"]
diesel = ["dep:diesel"]
postgres = ["dep:postgres-types"]
